{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 154,
  "lineage": "c4efce35-4819-a5f1-e785-c7ab9d9bc666",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "devtask",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "devtask",
            "metadata": [
              {
                "generation": 0,
                "name": "devtask",
                "resource_version": "431",
                "uid": "afbbd382-b76b-4cca-a95a-e52d238c8857"
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "devtask/backend",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "backend"
                },
                "name": "backend",
                "namespace": "devtask",
                "resource_version": "52399",
                "uid": "d9ac9caf-ee9e-4e89-a3d4-75fba7efac5b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.107.154.23",
                "cluster_ips": [
                  "10.107.154.23"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5000,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "backend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "devtask/frontend",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "frontend"
                },
                "name": "frontend",
                "namespace": "devtask",
                "resource_version": "25786",
                "uid": "e69858e0-6cdb-40cc-856a-609b7eb9e1b7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.108.94.99",
                "cluster_ips": [
                  "10.108.94.99"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 4173,
                    "protocol": "TCP",
                    "target_port": "4173"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "frontend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_ingress_class",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginx",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "nginx",
                "resource_version": "51262",
                "uid": "8be9de40-3b30-45ef-9c6a-47b88814a1b7"
              }
            ],
            "spec": [
              {
                "controller": "k8s.io/ingress-nginx",
                "parameters": []
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "devtask/devtask-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "devtask-ingress",
                "namespace": "devtask",
                "resource_version": "52507",
                "uid": "e03ca233-9f8e-4865-ba4e-2fcb28e2973d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "backend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "backend_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "devtask/backend-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "backend"
                },
                "name": "backend-ingress",
                "namespace": "devtask",
                "resource_version": "54081",
                "uid": "136e6832-2ac1-443c-9034-3ba22e1c45ac"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "devtask.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "backend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "frontend_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "devtask/frontend-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 5,
                "labels": {
                  "app": "frontend"
                },
                "name": "frontend-ingress",
                "namespace": "devtask",
                "resource_version": "51755",
                "uid": "11a97385-dcff-48bc-a654-a99f434ee12e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "devtask.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 4173
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "devtask/nginx-ingress",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-ingress",
                "namespace": "devtask",
                "resource_version": "51651",
                "uid": "da1db029-4a4e-445f-8ddd-f8b55fc8cd51"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.106.81.2",
                "cluster_ips": [
                  "10.106.81.2"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31862,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx-ingress"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "127.0.0.1"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx_ingress_controller_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "devtask/nginx-ingress-controller",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "nginx-ingress"
                },
                "name": "nginx-ingress-controller",
                "namespace": "devtask",
                "resource_version": "41145",
                "uid": "b95aa3c7-5bc8-4bdf-9761-1411d6ebff4f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.101.183.208",
                "cluster_ips": [
                  "10.101.183.208"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30080,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "https",
                    "node_port": 30443,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx-ingress"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.mongo",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "devtask/mongo",
            "metadata": [
              {
                "generation": 0,
                "name": "mongo",
                "namespace": "devtask",
                "resource_version": "450",
                "uid": "057cca01-7e72-435d-8074-6fb93a765c85"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.99.19.108",
                "cluster_ips": [
                  "10.99.19.108"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 27017,
                    "protocol": "TCP",
                    "target_port": "27017"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mongo"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}